# amazon-freertos

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
components/foo/: CMakeLists.txt
freertos-configs/: aws_iot_network_config.h  iot_config.h
src/: main.c
vendors/espressif/boards/components/mbedtls/: CMakeLists.txt
vendors/espressif/boards/esp32/: CMakeLists.txt
vendors/espressif/boards/esp32/aws_demos/: Makefile  sdkconfig.defaults
vendors/espressif/boards/esp32/aws_demos/application_code/: esp_prov_example.c  main.c
vendors/espressif/boards/esp32/aws_demos/application_code/espressif_code/amazon-freertos-common/: component.mk
vendors/espressif/boards/esp32/aws_tests/: Makefile  sdkconfig.defaults
vendors/espressif/boards/esp32/components/mbedtls/: CMakeLists.txt  component.mk
vendors/espressif/boards/esp32/ports/wifi/: iot_wifi.c
vendors/espressif/boards/esp32s2/: CMakeLists.txt
vendors/espressif/boards/esp32s2/aws_demos/: sdkconfig.defaults
vendors/espressif/boards/esp32s2/aws_tests/: sdkconfig.defaults
vendors/espressif/esp-idf/components/bt/: Kconfig
